--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,8 +9,8 @@
     }
     
     header .logo img{              /* Logo  */
-        width:50px;
-        height: 50px;
+        width:40px;
+        height: 40px;
                     
     }
     
@@ -95,6 +95,7 @@
     .txt-funciona, .instrucoes{
         display: block;
         width: 100%;
+        text-align: center;
     }
     
     .como-funciona .txt-funciona{
@@ -105,7 +106,9 @@
     .como-funciona .txt-funciona h3{
         font-size: 3em;
         line-height: 50px;
+        text-align: center;
     }
+
      
     .instrucoes .instru-box{
         display: flex;
@@ -116,7 +119,7 @@
     }
     
     .instrucoes .instru-box img{
-        max-width: 100px;
+        max-width: 120px;
     }     /* icom */
     
     .instrucoes .instru-box h4 span{
@@ -160,6 +163,9 @@
         color: white;
         margin-top: 10px;
         font-size: 15px;
+
+        /* sobre nós */
+
 }
 }
 
